# MLIP-Workflows

./: .gitignore  README-env.md  README.md  config.yml  environment.yml  main.bs  models_index.txt  pyproject.toml  relax.traj
assets/models/: MODELS.md
env/: ENVIRONMENTS.md  mace_env.yml  matgl_env.yml  mattersim_env.yml
notebook/: exploratory_notebook.ipynb
resultsPhonCoupling/: phonon_coupling_report_0.txt  phonon_coupling_report_1.txt  phonon_coupling_report_2.txt
scripts/: 1_phonons.ipynb  1_phonons.py  2_phonons.ipynb  3_phonons.ipynb  cell_relax.traj  defect_relax.traj  phonons.py  plot.py  relax.py  struct_build.py
scripts/diamond/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0y-.json  cache.0z+.json  cache.0z-.json  cache.1x+.json  cache.1x-.json  cache.1y+.json  cache.1y-.json  cache.1z+.json  cache.1z-.json  cache.eq.json
scripts/phonon/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0z+.json  cache.0z-.json  cache.10x+.json  cache.10x-.json  cache.10y+.json  cache.10y-.json  cache.10z+.json  cache.10z-.json  cache.11x+.json  cache.11x-.json  cache.11y+.json  cache.11y-.json  cache.11z+.json  cache.11z-.json  cache.12x+.json  cache.12x-.json  cache.12y+.json  cache.12y-.json  cache.12z+.json  cache.12z-.json  cache.13x+.json  cache.13x-.json  cache.13y+.json  cache.13y-.json  cache.13z+.json  cache.13z-.json  cache.14x+.json  cache.14x-.json  cache.14y+.json  cache.14y-.json  cache.14z+.json  cache.14z-.json  cache.15x+.json  cache.15x-.json  (+341 more)
test/: errorlog.txt  hbn_real_c2sc.poscar  mace_env_hpc.yml   struct_build.py
(+24 files in other folders)
